# ml-serving-rest-rpc

./: README.md  pyproject.toml
rest/: 01_basic_server.py  03_linear_regression.py  04_server.py  05_client.py
rpc/: client.py  generate_proto.sh  model.pkl  model_pb2.py  model_pb2.pyi  model_pb2_grpc.py  server.py
src/rest/: 02_basic_client.py  04_server.py  05_client.py
src/rpc/: client.py  model.proto  model_pb2.py  model_pb2.pyi
