[project]
name = "ml-serving-rest-rpc"
version = "0.1.0"
description = "The companion code for the SGH student club presentatione"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "grpcio-tools>=1.71.0",
    "mypy-protobuf>=3.6.0",
    "numpy>=2.2.5",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
